@@ -1,12 +1,17 @@
 ebusd - ChangeLog
 -----------------
 
+2014-10-03  Roland Jax  <roland.jax@liwest.at>
+* class Logger: minor name changes.
+* class CYCData: delCommands fixed.
+* class BaseLoop: config option added. (config reload implemented)
+
 2014-10-02  Roland Jax  <roland.jax@liwest.at>
 * class Network splitted into classes Network and Connection.
-* class Message separated from class Baseloop.
+* class Message separated from class BaseLoop.
 * global Objects (network, commands, ebusloop, cycdata) relocated into
   new global Object baseloop.
-* daemon log option reworked (logarea -> logareas; loglevel -> log level).
+* class BaseLoop: log option reworked (logarea -> logareas; loglevel -> log level).
 
 2014-06-26  Roland Jax  <roland.jax@liwest.at>
 * ebusdump merged into ebusctl.
